// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="TWvSI S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb__Base>
          <div
            className="dNDqlT S1"
          >
            <responsiveweb__Base>
              <div
                className="blsqKW S1"
              >
                <div
                  className="S1"
                >
                  lead
                </div>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`2. two child elements 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="TWvSI S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb__Base>
          <div
            className="dVONZ S1"
          >
            <responsiveweb__Base>
              <div
                className="biSnqQ S1"
              >
                <div
                  className="S1"
                >
                  lead
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="dVXpuR S1"
              />
            </responsiveweb>
            <responsiveweb__SupportsContainer>
              <div
                className="bWUCtt S1"
              >
                <responsiveweb>
                  <div
                    className="vRmnC S1"
                  >
                    <div
                      className="S1"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb>
              </div>
            </responsiveweb__SupportsContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. three child elements 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="kcccKH S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb__Base>
          <div
            className="dVONZ S1"
          >
            <responsiveweb__Base>
              <div
                className="elUlFq S1"
              >
                <div
                  className="S1"
                >
                  lead
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="dVXpuR S1"
              />
            </responsiveweb>
            <responsiveweb__SupportsContainer>
              <div
                className="bWUCtt S1"
              >
                <responsiveweb>
                  <div
                    className="vRmnC S1"
                  >
                    <div
                      className="S1"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb>
                <responsiveweb>
                  <div
                    className="etnAjX S1"
                  >
                    <div
                      className="S1"
                    >
                      support-2
                    </div>
                  </div>
                </responsiveweb>
              </div>
            </responsiveweb__SupportsContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
